src/main/java/com/example/skill/error/SubError.java
package com.example.skill.error;

public interface SubError {
}
